--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -903,6 +903,7 @@
     <Compile Include="Models\MetadataModels\SCDM_solicitud_rel_orden_compraMetadata.cs" />
     <Compile Include="Models\MetadataModels\SCDM_versiones_herramienta_excelMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_historico_resultadoMetadata.cs" />
+    <Compile Include="Models\MetadataModels\view_ideas_mejoraMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_SCDM_materiales_x_solicitudMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_valores_fiscal_yearMetadata.cs" />
     <Compile Include="Models\MetadataModels\view_valores_forecastMetatdata.cs" />
