2025-03-28 Se sube avance de cotizador.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -589,6 +589,9 @@
     <Compile Include="Models\CTZ_Temp_IHS_Production.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CTZ_Total_Time_Per_Fiscal_Year.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CTZ_Vehicle_Types.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
