--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -556,6 +556,9 @@
     <Compile Include="Models\CTZ_Material_Type_Lines.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\CTZ_OEE.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\CTZ_OEMClients.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
@@ -5919,6 +5922,7 @@
     <Content Include="Views\CTZ_Catalogs\engineering_dimension.cshtml" />
     <Content Include="Views\CTZ_Catalogs\strokes_per_minute.cshtml" />
     <Content Include="Views\CTZ_Catalogs\hours_by_line.cshtml" />
+    <Content Include="Views\CTZ_Catalogs\CTZ_OEE.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
