2025-05-29 SCDM: Nuevos campos budget creacion de materiales.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -1222,6 +1222,9 @@
     <Compile Include="Models\SCDM_cat_tipo_transito.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SCDM_cat_tipo_transporte.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SCDM_cat_tipo_venta.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
