2025-06-05 SCDM: Se completan nuevos campos de budget.

--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -1135,6 +1135,9 @@
     <Compile Include="Models\SCDM_cat_incoterm.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\SCDM_cat_lovs_valuation_class.cs">
+      <DependentUpon>NuevoPortalModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\SCDM_cat_materiales_maquila.cs">
       <DependentUpon>NuevoPortalModel.tt</DependentUpon>
     </Compile>
