--- a/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
+++ b/CódigoFuente/BitacorasProduccion/Portal_2_0.csproj
@@ -5928,6 +5928,7 @@
     <Content Include="Views\BG_ihs_vehicle_custom\Index.cshtml" />
     <Content Include="Views\BG_ihs_vehicle_custom\UpdateDemand.cshtml" />
     <Content Include="Views\BG_forecast_cat_clientes\Disable.cshtml" />
+    <Content Include="Views\BG_IHS_combinacion\Upsert.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
