2025-07-24 Se optimiza IHS.

--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -68,4 +68,5 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
   <package id="Thought.vCards" version="1.0.9" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="Z.EntityFramework.Extensions" version="9.103.9.2" targetFramework="net472" />
 </packages>
