--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -7,6 +7,10 @@
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net45" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net45" />
   <package id="Foolproof" version="0.9.4518" targetFramework="net45" />
+  <package id="Hangfire.AspNet" version="0.3.0" targetFramework="net472" />
+  <package id="Hangfire.Console" version="1.4.3" targetFramework="net472" />
+  <package id="Hangfire.Core" version="1.8.20" targetFramework="net472" />
+  <package id="Hangfire.SqlServer" version="1.8.20" targetFramework="net472" />
   <package id="itext7" version="7.2.2" targetFramework="net472" />
   <package id="itext7.commons" version="7.2.2" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
@@ -37,7 +41,7 @@
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net472" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security.Facebook" version="2.1.0" targetFramework="net472" />
