2025-08-01 Se configura prueba de correo de Phishing.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -145,4 +145,15 @@
       <endpoint address="http://10.121.24.5:8050/WebServiceBasculas.asmx" binding="basicHttpBinding" bindingConfiguration="WebServiceBasculasSoap" contract="ServiceReferenceBasculas.WebServiceBasculasSoap" name="WebServiceBasculasSoap" />
     </client>
   </system.serviceModel>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+	<modules>
+		<remove name="UrlRoutingModule-4.0" />
+		<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
+	</modules>
+  </system.webServer></configuration>
