--- a/CódigoFuente/BitacorasProduccion/packages.config
+++ b/CódigoFuente/BitacorasProduccion/packages.config
@@ -29,6 +29,13 @@
   <package id="Microsoft.AspNet.SignalR.JS" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.4.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client.es" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages.es" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
