2025-08-26 SCDM: Se corrige Others en clientes automotriz.

--- a/CódigoFuente/BitacorasProduccion/Web.config
+++ b/CódigoFuente/BitacorasProduccion/Web.config
@@ -39,8 +39,8 @@
     <sessionState timeout="400" />
     <globalization uiCulture="es" culture="es-MX" />
     <compilation debug="true" targetFramework="4.7.2" />
-    <httpRuntime maxRequestLength="104857600" targetFramework="4.7.2" />
-    <customErrors mode="RemoteOnly">
+	  <httpRuntime maxRequestLength="104857600" executionTimeout="600" targetFramework="4.7.2" />
+	  <customErrors mode="RemoteOnly">
       <error redirect="~/Error/NotFound" statusCode="404" />
       <error redirect="~/Error/BadRequest" statusCode="400" />
     </customErrors>
@@ -146,6 +146,11 @@
     </client>
   </system.serviceModel>
 <system.webServer>
+	<security>
+		<requestFiltering>
+			<requestLimits maxAllowedContentLength="62428800" />
+		</requestFiltering>
+	</security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
@@ -156,4 +161,5 @@
 		<remove name="UrlRoutingModule-4.0" />
 		<add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" preCondition="" />
 	</modules>
-  </system.webServer></configuration>
+  </system.webServer>
+</configuration>
